# ConsensusLayerVerifier

./: .env.example  .gitignore  README.md  foundry.toml  remappings.txt
.github/workflows/: test.yml
data/: beacon_block_header.json  proof.json
py/: README.md  pyproject.toml
py/merkle_proof_generator/: main.py
script/: ConsensusLayerVerifier.s.sol  get_beacon_block.sh  get_latest_beacon_state.sh
src/: ConsensusLayerVerifier.sol
src/lib/: EndianHelper.sol  MerkleTree.sol
test/: ConsensusLayerVerifier.t.sol
